# bdd_simplon

./: .gitignore  404.html  README.md  bdd_structure.lo1  bdd_structure.loo  bdd_structure.txt  diagramme.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html
CSVtoPostgresDataPipeline/: main.py
CSVtoPostgresDataPipeline/data/: V12_V13.xls
CSVtoPostgresDataPipeline/src/: clean_csv.py  download_file.py  fill_database.py  main.py
api/: Dockerfile  conftest.py  crud.py  database.py  main.py  requirements.txt  schemas.py  test.py
azure_resources/: 1_azure_datafactory.sh  1_azure_res_db.sh  1_azure_resources.sh  2_azure_df_trig.sh  2_azure_docker.sh  2_azure_function.sh  3_azure_docker.sh  azure_bdd.sh  delete_ressources.sh  function_app.py  pipeline.json  template.json
azurefunction/: Dockerfile  function_app.py  requirements.txt
bdd_structure/: bdd_structure.lo1  bdd_structure.loo  bdd_structure.txt  diagramme.md
compte_rendu/: .~lock.Brief_bdd_formations_simplon.odt#  .~lock.Brief_bdd_formations_simplon_V2.odt#  Brief_bdd_formations_simplon.odt  Brief_bdd_formations_simplon_V2.odt
docs/: index.md
models/: certification.py  certification_formation.py  common_imports.py  formacode.py  formation.py  nsf.py  nsf_formation.py  parents.py  rncp.py  rncp_formacode.py  rncp_formation.py  rs.py  rs_formacode.py  rs_formation.py
myenv/: pyvenv.cfg
planning_de_travail/: Brief_bdd_formations_simplon.odt  ~$ief_bdd_formations_simplon.odt
search/: search_index.json
simplonscrapy/: output.csv  output2.csv  output3.csv
(+54 files in other folders)
