[tool.poetry]
name = "bdd-simplon"
version = "0.1.0"
description = ""
authors = ["David Tacite <david.tacite@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
scrapy = "^2.11.2"
requests = "^2.32.3"
tqdm = "^4.66.4"
azure-functions = "^1.12.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
